--- a/exercice6-post-it/styles.css
+++ b/exercice6-post-it/styles.css
@@ -29,7 +29,7 @@ body {
 .post-it {
     position: relative;
     margin: 10px;
-    background-color: #fff;
+    background-color: #F9FD00;
     width : 200px;
     height: 180px;
     text-align: center;
